hphp/hack/test/typecheck/reactive/parse_multiple9.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__Rx, __Cipp>>
function f(): void {}
